--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_native_splash: ^2.3.1
+  flutter_secure_storage: ^8.0.0
 
-flutter_native_splash:
-  image: "assets/images/dogdom_splash.png"
-  color: "#ffffff"
-  android: "true"
-  ios: "true"
 
 dev_dependencies:
   flutter_test:
