--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_secure_storage: ^8.0.0
   google_fonts: ^5.0.0
+  flutter_svg: ^2.0.7
 
 
 dev_dependencies:
