--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,10 @@
-*.cpp linguist-detectable=false
-*.html linguist-detectable=false
-*.cmake linguist-detectable=false
+* linguist-detectable=false
+
+# Dart and Flutter files
 *.dart linguist-detectable=true
+*.flutter linguist-detectable=true
+
+# C++ and CMake files
+*.cpp linguist-detectable=false
+*.h linguist-detectable=false
+CMakeLists.txt linguist-detectable=false
